# lambdapi-stdlib

./: .gitignore  AUTHORS.md  Bool.lp  CHANGES.md  Classic.lp  CoC.lp  Comp.lp  Context.lp  Epsilon.lp  Eq.lp  FOL.lp  FunExt.lp  HOL.lp  Impred.lp  List.lp  Logic.lp  Makefile  Nat.lp  NatBooL.lp  NatBool.lp  Option.lp  Pair.lp  Pos.lp  Prod.lp  Prop.lp  PropExt.lp  README.md  Set.lp  Skolem.lp  String.lp  Tactic.lp  Z.lp  blanqui-lib.opam  lambdapi-stdlib.opam  lambdapi.pkg  propExt.lp
.github/workflows/: main.yml
rocq/: .gitignore  Makefile  _CoqProject  encoding.lp  mappings.lp  mappings.v
