opam-version: "2.0"
synopsis: "Basic library on natural numbers, integers and polymorphic lists"
description: """
This package provides a Lambdapi library on natural numbers,
integers and polymorphic lists (in intuitionistic first-order logic).
It provides the following modules:
- Set: type of set codes
- Prop: propositional logic
- Eq: Leibniz equality
- FOL: first-order logic
- Bool: booleans
- Nat: natural numbers
- List: polymorphic lists
- Z: integers
"""
maintainer: ["frederic.blanqui@inria.fr"]
authors: ["Frédéric Blanqui" "Quentin Buzet" "Quentin Garchery"]
license: "CECILL-2.1"
homepage: "https://github.com/fblanqui/lib"
bug-reports: "https://github.com/fblanqui/lib/issues"
dev-repo: "git+https://github.com/fblanqui/lib.git"
install: [ make "install" ]
uninstall: [ make "uninstall" ]
depends: [
  "lambdapi" {>= "2.2.1"}
]
